Fixed testimonial fade

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
     <div class="container-sm py-24">
       <%= image_tag 'george.jpg', alt: 'George Kettle', height: 100, width: 100, class: 'rounded-full border border-black h-16 w-16' %>
       <h1 class="mt-6 text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl">Ruby on Rails Developer<br>& Bootcamp Educator.</h1>
-      <p class="mt-6 text-lg leading-7 text-gray-600">I learned to code to help my mother's organic farm. My passion for small businesses led me to start my own venture with a friend, and for the past two years, I have been imparting my knowledge as a teacher at Le Wagon.</p>
+      <p class="mt-6 text-lg leading-7 text-gray-600">I learned to code to help my mother's organic farm. My passion for small business led me to start my own venture with a friend, and for the past two years, I have been imparting my knowledge as a teacher at Le Wagon.</p>
       <div class="mt-10 flex items-center space-x-4">
         <%= link_to download_resume_path, class: 'btn btn-primary' do %>
           DOWNLOAD CV
@@ -27,7 +27,7 @@
         <% end %>
       </div>
       <%# Fade %>
-      <div class="absolute flex items-end justify-center inset-0 bg-gradient-to-t via-transparent from-bg-light to-transparent pointer-events-none">
+      <div class="absolute flex items-end justify-center bottom-0 inset-x-0 h-64 bg-gradient-to-t from-bg-light pointer-events-none">
         <%= link_to "100's more", testimonials_path, class: 'btn pointer-events-auto' %>
       </div>
     </div>
@@ -55,7 +55,7 @@
   <div class="py-20">
     <div class="container-sm">
       <h2 class="text-2xl font-bold tracking-tight text-gray-900 sm:text-3xl">Work & Education</h1>
-      <p class="mt-6 text-lg leading-8 text-gray-600">✅ University ✅ Bootcamps ✅ Small Business</p>
+      <p class="mt-6 text-lg leading-8 text-gray-600">University, Bootcamps & Small Business</p>
     </div>
     <div class="container-md mt-20 grid grid-cols-1 md:grid-cols-2 gap-8">
       <%# Work %>
