--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,66 @@
-Home
+<div class="relative isolate px-6 lg:px-8">
+    <div class="mx-auto max-w-2xl py-16 lg:py-24 lg:py-44">
+        <div class="hidden sm:mb-4 sm:flex sm:justify-center justify-start">
+            <a href="#" class="flex items-center rounded-full bg-white border border-tertiary-200 p-1 pr-2 text-tertiary-500 hover:text-tertiary-600 sm:text-base lg:text-sm xl:text-base">
+                <span class="rounded-full bg-primary-100 px-3 py-0.5 text-sm font-semibold leading-5 text-primary-700">New writings</span>
+                <span class="ml-4 text-sm font-medium">Read the latest on the blog</span>
+                <svg class="ml-2 h-5 w-5 text-tertiary-500" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                    <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
+                </svg>
+            </a>
+        </div>
+        <div class="text-center">
+            <h1 class="text-4xl font-bold tracking-tight text-tertiary-900 sm:text-6xl">I'm an IndieHacker building in public 🤘</h1>
+            <p class="mt-6 text-lg leading-8 text-tertiary-600">Building a business can be difficult. I want to share my journey in case others can benefit from it. Follow along here and on Twitter.</p>
+            <div class="mt-10 flex items-center justify-center gap-x-6">
+                <%# TWITTER LINK %>
+                <%= link_to 'https://twitter.com/george_kettle', class: "flex items-center gap-x-2 rounded-md bg-primary-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-primary-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600", target: '_blank' do %>
+                    <svg viewBox="0 0 20 20" aria-hidden="true" class="h-5 w-5" fill="currentColor"><path d="M6.29 18.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0 0 20 3.92a8.19 8.19 0 0 1-2.357.646 4.118 4.118 0 0 0 1.804-2.27 8.224 8.224 0 0 1-2.605.996 4.107 4.107 0 0 0-6.993 3.743 11.65 11.65 0 0 1-8.457-4.287 4.106 4.106 0 0 0 1.27 5.477A4.073 4.073 0 0 1 .8 7.713v.052a4.105 4.105 0 0 0 3.292 4.022 4.095 4.095 0 0 1-1.853.07 4.108 4.108 0 0 0 3.834 2.85A8.233 8.233 0 0 1 0 16.407a11.615 11.615 0 0 0 6.29 1.84"></path></svg>
+                    Follow along
+                <% end %>
+                <%# BLOG LINK %>
+                <%= link_to 'https://twitter.com/george_kettle', class: "flex items-center gap-x-2 rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-tertiary-800 border border-tertiary-200 shadow-sm hover:bg-tertiary-50 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-tertiary-900", target: '_blank' do %>
+                    ✍🏼
+                    <span>Read the blog</span>
+                <% end %>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="container-lg pb-32">
+    <h2 class="text-xl font-bold tracking-tight text-gray-900 sm:text-2xl mb-8">From the blog</h2>
+    <div class="grid gap-6 grid-cols-2">
+        <div class="bg-white rounded-lg shadow p-8 flex items-end bg-cover bg-center" style="background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0), rgba(0, 0, 0, 0.6)), url('https://plus.unsplash.com/premium_photo-1675484743423-57da4e8011c2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8cm9hZHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=800&q=60')">
+            <div class="flex justify-between items-end gap-x-10">
+                <div class="space-y-2 text-white">
+                    <p class="h3 text-white">Start. Don't stop. Keep going.</p>
+                    <p class="line-clamp-2">Building a business can be difficult. I want to share my journey in case others can benefit from it. Follow along here and on Twitter.</p>
+                </div>
+                <%= link_to '#', class: "shrink-0 h-10 w-10 flex items-center justify-center text-tertiary-900 bg-white shadow rounded-full" do %>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3" />
+                    </svg>
+                <% end %>
+            </div>
+        </div>
+        <div class="grid gap-6">
+            <% 2.times do %>
+                <div class="bg-white rounded-lg shadow p-8 h-96 flex items-end bg-cover bg-center" style="background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0), rgba(0, 0, 0, 0.6)), url('https://plus.unsplash.com/premium_photo-1675484743423-57da4e8011c2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8cm9hZHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=800&q=60')">
+                    <div class="flex justify-between items-end gap-x-10">
+                        <div class="space-y-2 text-white">
+                            <p class="h3 text-white">Start. Don't stop. Keep going.</p>
+                            <p class="line-clamp-2">Building a business can be difficult. I wanted to share my journey in case others can benefit from it. Follow along here and on Twitter. Follow along ✍🏼</p>
+                        </div>
+                        <%= link_to '#', class: "shrink-0 h-10 w-10 flex items-center justify-center text-tertiary-900 bg-white shadow rounded-full" do %>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3" />
+                            </svg>
+                        <% end %>
+                    </div>
+                </div>
+            <% end %>
+        </div>
+    </div>
+</div>
