--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,21 +1,21 @@
-<footer class="bg-gray-900">
+<footer class="bg-tertiary-900">
   <div class="mx-auto max-w-7xl overflow-hidden py-20 px-6 sm:py-24 lg:px-8">
     <nav class="-mb-6 columns-2 sm:flex sm:justify-center sm:space-x-12" aria-label="Footer">
       <div class="pb-6">
-        <%= link_to 'About Me', root_path(anchor: 'about_me'), class: 'text-sm leading-6 text-gray-300 hover:text-white hover:underline underline-offset-4' %>
+        <%= link_to 'About Me', root_path(anchor: 'about_me'), class: 'text-sm leading-6 text-tertiary-300 hover:text-white hover:underline underline-offset-4' %>
       </div>
       <div class="pb-6">
-        <%= link_to 'Testimonials', root_path(anchor: 'testimonials'), class: 'text-sm leading-6 text-gray-300 hover:text-white hover:underline underline-offset-4' %>
+        <%= link_to 'Testimonials', root_path(anchor: 'testimonials'), class: 'text-sm leading-6 text-tertiary-300 hover:text-white hover:underline underline-offset-4' %>
       </div>
       <div class="pb-6">
-        <%= link_to 'Work & Education', root_path(anchor: 'work_education'), class: 'text-sm leading-6 text-gray-300 hover:text-white hover:underline underline-offset-4' %>
+        <%= link_to 'Work & Education', root_path(anchor: 'work_education'), class: 'text-sm leading-6 text-tertiary-300 hover:text-white hover:underline underline-offset-4' %>
       </div>
       <div class="pb-6">
-        <%= link_to 'Projects', root_path(anchor: 'projects'), class: 'text-sm leading-6 text-gray-300 hover:text-white hover:underline underline-offset-4' %>
+        <%= link_to 'Projects', root_path(anchor: 'projects'), class: 'text-sm leading-6 text-tertiary-300 hover:text-white hover:underline underline-offset-4' %>
       </div>
     </nav>
     <div class="flex justify-center items-center space-x-6 mt-10">
-      <%= link_to "https://github.com/georgekettle", class: "text-gray-300 hover:text-white", target: '_blank' do %>
+      <%= link_to "https://github.com/georgekettle", class: "text-tertiary-300 hover:text-white", target: '_blank' do %>
         <span class="sr-only">Github</span>
         <svg viewBox="0 0 16 16" class="w-5 h-5" fill="currentColor" aria-hidden="true"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg>
       <% end %>
