--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,6 +1,6 @@
 <div class="px-6 pt-8 pb-24 lg:px-8">
     <div class="container-lg mb-14">
-        <div class="bg-white border border-tertiary-200 shadow rounded-lg h-96"></div>
+        <div class="bg-white border border-tertiary-200 shadow rounded-lg bg-cover bg-center aspect-video" style="background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0), rgba(0, 0, 0, 0.6)), url('https://plus.unsplash.com/premium_photo-1675484743423-57da4e8011c2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8cm9hZHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=800&q=60')" ></div>
     </div>
     <div class="mx-auto max-w-3xl text-base leading-7 text-gray-700">
         <p class="text-base font-semibold leading-7 text-primary-500"><%= @blog.created_at.strftime("%B %d, %Y") %></p>
