--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,8 +1,8 @@
-<%= link_to blog, class: 'bg-white h-full rounded-lg shadow hover:shadow-lg transform scale-100 hover:scale-[1.02] transition-all duration-200 ease-in-out p-8 flex items-end bg-cover bg-center', style: "background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0), rgba(0, 0, 0, 0.6)), url('https://plus.unsplash.com/premium_photo-1675484743423-57da4e8011c2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8cm9hZHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=800&q=60')" do %>
-    <div class="flex justify-between items-end gap-x-10">
+<%= link_to blog, class: 'bg-white h-full rounded-lg shadow hover:shadow-lg transform scale-100 hover:scale-[1.02] transition-all duration-200 ease-in-out p-4 md:p-8 flex items-end bg-cover bg-center', style: "background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0), rgba(0, 0, 0, 0.6)), url('https://plus.unsplash.com/premium_photo-1675484743423-57da4e8011c2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8cm9hZHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=800&q=60')" do %>
+    <div class="w-full flex justify-between items-end gap-x-10">
         <div class="space-y-2 text-white">
-            <p class="h3 text-white drop-shadow-sm"><%= blog.title %></p>
-            <p class="line-clamp-2"><%= blog.content %></p>
+            <p class="h3 line-clamp-2 text-white drop-shadow-sm"><%= blog.title %></p>
+            <p class="line-clamp-2 opacity-80"><%= blog.content %></p>
         </div>
         <%= content_tag :div, class: "hover:shadow-lg transform scale-100 hover:scale-105 transition-all duration-200 ease-in-out shrink-0 h-10 w-10 flex items-center justify-center text-tertiary-900 bg-white shadow rounded-full" do %>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
