--- a/app/views/blogs/_blogs.html.erb
+++ b/app/views/blogs/_blogs.html.erb
@@ -1,8 +1,12 @@
+<% reverse ||= false %>
+
 <% first_blog = blogs.first %>
 <% last_blogs = blogs.drop(1) %>
-<div class="grid gap-6 grid-cols-2">
-    <%= render first_blog %>
-    <div class="grid gap-6">
+<div class="grid gap-4 md:gap-6 md:grid-cols-2">
+    <div class="aspect-video md:aspect-auto <%= 'order-last' if reverse %>">
+        <%= render first_blog %>
+    </div>
+    <div class="grid gap-4 md:gap-6">
         <% last_blogs.each do |blog| %>
             <div class="aspect-video">
                 <%= render blog %>
