--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,13 @@
 <div class="relative isolate px-6 lg:px-8">
     <div class="mx-auto max-w-2xl py-16 lg:py-24 lg:py-44">
         <div class="hidden sm:mb-4 sm:flex sm:justify-center justify-start">
-            <a href="#" class="flex items-center rounded-full bg-white border border-tertiary-200 p-1 pr-2 text-tertiary-500 hover:text-tertiary-600 sm:text-base lg:text-sm xl:text-base">
+            <%= link_to blogs_path, class: "flex items-center rounded-full bg-white border border-tertiary-200 p-1 pr-2 text-tertiary-500 hover:text-tertiary-600 sm:text-base lg:text-sm xl:text-base" do %>
                 <span class="rounded-full bg-primary-100 px-3 py-0.5 text-sm font-semibold leading-5 text-primary-700">New writings</span>
                 <span class="ml-4 text-sm font-medium">Read the latest on the blog</span>
                 <svg class="ml-2 h-5 w-5 text-tertiary-500" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                     <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
                 </svg>
-            </a>
+            <% end %>
         </div>
         <div class="text-center">
             <h1 class="text-4xl font-bold tracking-tight text-tertiary-900 sm:text-6xl">I'm an IndieHacker building in public 🤘</h1>
@@ -19,7 +19,7 @@
                     Follow along
                 <% end %>
                 <%# BLOG LINK %>
-                <%= link_to 'https://twitter.com/george_kettle', class: "flex items-center gap-x-2 rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-tertiary-800 border border-tertiary-200 shadow-sm hover:bg-tertiary-50 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-tertiary-900", target: '_blank' do %>
+                <%= link_to blogs_path, class: "flex items-center gap-x-2 rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-tertiary-800 border border-tertiary-200 shadow-sm hover:bg-tertiary-50 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-tertiary-900" do %>
                     ✍🏼
                     <span>Read the blog</span>
                 <% end %>
@@ -34,7 +34,7 @@
     <%= render 'blogs/blogs', blogs: @blogs %>
     <div class="flex justify-center">
         <%# BLOG LINK %>
-        <%= link_to blogs_path, class: "flex items-center gap-x-2 rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-tertiary-800 border border-tertiary-200 shadow-sm hover:bg-tertiary-50 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-tertiary-900", target: '_blank' do %>
+        <%= link_to blogs_path, class: "flex items-center gap-x-2 rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-tertiary-800 border border-tertiary-200 shadow-sm hover:bg-tertiary-50 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-tertiary-900" do %>
             <span>See all blogs</span>
         <% end %>
     </div>
