--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -6,6 +6,7 @@
         <div class="form-inputs">
             <%= f.input :title %>
             <%= f.input :content %>
+            <%= f.input :cover_image, as: :file %>
         </div>
 
         <div class="form-actions">
