--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -2,10 +2,16 @@
     <div class="flex flex-col items-center space-y-2 py-24">
         <h1>Blog</h1>
     </div>
-    <div class="grid grid-2 gap-6">
-        <% blogs_sliced_by_3 = @blogs.each_slice(3).to_a %>
-        <% blogs_sliced_by_3.each_with_index do |blog_slice, index| %>
-            <%= render 'blogs/blogs', blogs: blog_slice, reverse: index.odd? %>
-        <% end %>
-    </div>
+    <% if @blogs.any? %>
+        <div class="grid grid-2 gap-6">
+            <% blogs_sliced_by_3 = @blogs.each_slice(3).to_a %>
+            <% blogs_sliced_by_3.each_with_index do |blog_slice, index| %>
+                <%= render 'blogs/blogs', blogs: blog_slice, reverse: index.odd? %>
+            <% end %>
+        </div>
+    <% else %>
+        <div class="bg-white rounded-lg border border-tertiary-200 p-6 text-center text-tertiary-500 shadow">
+            Blog posts coming soon! 😉
+        </div>
+    <% end %>
 </div>
