Fixed minor issue with styling of blog cards

--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -2,7 +2,7 @@
 
 <%= link_to blog, class: 'bg-white h-full rounded-lg shadow hover:shadow-lg transform scale-100 hover:scale-[1.02] transition-all duration-200 ease-in-out p-4 md:p-8 flex items-end bg-cover bg-center', style: blog_style do %>
     <div class="w-full flex justify-between items-end gap-x-10">
-        <div class="space-y-2 text-white">
+        <div class="space-y-2 text-white grow-1 shrink-1">
             <p class="h3 line-clamp-2 text-white drop-shadow-sm"><%= blog.title %></p>
             <p class="line-clamp-2 opacity-80"><%= blog.content %></p>
         </div>
