--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -5,7 +5,15 @@
     <%= simple_form_for @blog do |f| %>
         <div class="form-inputs">
             <%= f.input :title %>
-            <%= f.input :content %>
+            <div>
+                <%= f.label :content, class: 'label' %>
+                <div data-controller="quill" class="mt-2">
+                    <div data-quill-target="editor" class="bg-white">
+                        <%# This is where the user will edit the content %>
+                    </div>
+                    <%= f.hidden_field :content, data: { quill_target: 'input' } %>
+                </div>
+            </div>
             <%= f.input :cover_image, as: :file %>
         </div>
 
