--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -3,15 +3,17 @@
         <h1>New Blog</h1>
     </div>
     <%= simple_form_for @blog do |f| %>
+        <%= f.error_notification %>
+
         <div class="form-inputs">
             <%= f.input :title %>
             <div>
-                <%= f.label :content, class: 'label' %>
+                <%= f.label :body, class: 'label' %>
                 <div data-controller="quill" class="mt-2">
                     <div data-quill-target="editor" class="bg-white">
                         <%# This is where the user will edit the content %>
                     </div>
-                    <%= f.hidden_field :content, data: { quill_target: 'input' } %>
+                    <%= f.hidden_field :body, data: { quill_target: 'input' } %>
                 </div>
             </div>
             <%= f.input :cover_image, as: :file %>
