--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -9,6 +9,6 @@
     <div class="mx-auto max-w-3xl text-base leading-7 text-gray-700">
         <p class="text-base font-semibold leading-7 text-primary-500"><%= @blog.created_at.strftime("%B %d, %Y") %></p>
         <h1 class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl"><%= @blog.title %></h1>
-        <p class="mt-6 text-xl leading-8"><%= @blog.content %></p>
+        <p class="mt-6 text-xl leading-8"><%= @blog.body %></p>
     </div>
 </div>
