--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -34,6 +34,11 @@
         @apply text-base font-medium text-tertiary-900 tracking-tight;
     }
 
+    p,
+    .p {
+        @apply text-base leading-loose mb-6 font-medium;
+    }
+
     /* CONTAINERS */
     .container {
         @apply max-w-3xl mx-auto px-4 sm:px-6 lg:px-8;
@@ -75,4 +80,34 @@
     .label {
         @apply block text-sm font-medium leading-6 text-tertiary-900
     }
-}@import 'actiontext.css';
+
+    /* ACTION TEXT */
+    .quill-content p {
+        @apply text-tertiary-900 text-base leading-loose mb-6 font-medium text-tertiary-700;
+    }
+
+    .quill-content ul {
+        @apply list-disc mb-8 mt-2 text-tertiary-700;
+    }
+
+    .quill-content ol {
+        @apply list-decimal mb-8 mt-2 text-tertiary-700;
+    }
+
+    .quill-content ol li,
+    .quill-content ul li {
+        @apply text-base leading-loose mb-4 ml-8 font-medium;
+    }
+
+    .quill-content h1,
+    .quill-content h2,
+    .quill-content h3,
+    .quill-content h4 {
+        @apply text-tertiary-900 font-bold mb-6;
+    }
+
+    .quill-content h5,
+    .quill-content h6 {
+        @apply text-primary-900 font-medium mb-2;
+    }
+}
