--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,9 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <%# DEFAULT META TAGS %>
+    <%= display_meta_tags site: "George Kettle" %>
+
     <%# Satoshi sans serif & Bespoke serif font %>
     <link href="https://api.fontshare.com/v2/css?f[]=general-sans@500,300,600,400,700&display=swap" rel="stylesheet">
     
