--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,3 +1,9 @@
+<% set_meta_tags(
+        title: @blog.title,
+        description: @blog.body.to_plain_text.truncate(150),
+        image: cl_image_path(@blog.cover_image.key, height: 630, width: 1200, crop: :fill)
+    ) %>
+
 <div class="container-lg pt-4 md:pt-8 pb-24">
     <div class="mb-14">
         <% if @blog.cover_image.attached? %>
