Styled animation of blog card

--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,6 +1,6 @@
 <% blog_style = blog.cover_image.attached? ? "background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0), rgba(0, 0, 0, 0.6)), url('#{cl_image_path(blog.cover_image.key, height: 800, width: 800, crop: :fill)}')" : "background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0), rgba(0, 0, 0, 0.6))" %>
 
-<%= link_to blog, class: 'bg-white h-full rounded-lg shadow hover:shadow-lg transform scale-100 hover:scale-[1.02] transition-all duration-200 ease-in-out p-4 md:p-8 flex items-end bg-cover bg-center', style: blog_style do %>
+<%= link_to blog, class: 'bg-white h-full rounded-lg shadow hover:shadow-xl transform scale-100 hover:scale-[1.01] transition-all duration-200 ease-in-out p-4 md:p-8 flex items-end bg-cover bg-center', style: blog_style do %>
     <div class="w-full flex justify-between items-end gap-x-10">
         <div class="space-y-2 text-white shrink-1">
             <p class="h3 line-clamp-2 text-white drop-shadow-sm"><%= blog.title %></p>
