--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,3 +1,8 @@
+<% set_meta_tags(
+        title: "Blog",
+        description: "Thoughts and ideas from George Kettle"
+    ) %>
+
 <div class="container-lg pb-24">
     <div class="flex flex-col items-center space-y-2 py-24">
         <h1>Blog</h1>
